k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bigdata-manager
  labels:
    name: bigdata-manager
    app: bigdata-manager
